# Glassistant

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  db.py  dependencies.py  events.py  main.py
backend/app/agent/: loop.py  tools.py  widget_registry.py
backend/app/repositories/: saved_layouts.py  settings.py  todos.py  widgets.py
backend/app/routers/: calendar.py  chat.py  events.py  flights.py  layout.py  saved_layouts.py  settings.py  spotify.py  system.py  todos.py  transit.py  weather.py
backend/app/schemas/: calendar.py  chat.py  saved_layout.py  settings.py  todo.py  widget.py
backend/app/services/: calendar.py  flights.py  ollama.py  spotify.py  transit.py  weather.py
backend/migrations/: 001_init.sql  002_settings.sql  003_effect_style.sql  004_grid_config.sql  004_saved_layouts.sql  005_calendar_tokens.sql  006_todos.sql
backend/tests/: conftest.py  test_layout_api.py  test_weather_cache.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/: AdminGrid.tsx  AutoScroll.tsx  ChatPanel.tsx  Grid.tsx  MobileGrid.tsx  WeatherEffect.tsx  WeatherEffectDynamic.tsx  WidgetConfigEditor.tsx
frontend/src/components/widgets/: Calendar.tsx  Clock.tsx  Countdown.tsx  (+9 more)
frontend/src/lib/: api.ts  previewContext.ts  sse.ts  themes.ts  types.ts  useEffectStyle.ts  useGridConfig.ts  useTheme.ts
frontend/src/routes/: admin.tsx  mirror.tsx  mobile.tsx
(+1 files in other folders)
